# outofwork

./: hscope.out  hscope.out.tmp
Parser.playground/: Contents.swift
StateMonad.playground/: Contents.swift
TestParser/TestParser/: main.swift
TestParser/TestParser.xcodeproj/: project.pbxproj
h5/first/: .project  index.html  manifest.json
h5/myApp/: config.xml
haskell/: Case.hs  DataType.hs  Eq.hs  FunctionWithWhere.hs  GreetIfCool1.hs  Lambda.hs  Monad.hs  learn.hs
haskell/Course.hsproj/: .uuid  Applicative.hs  Core.hs  Course.cabal  Functor.hs  Id.hs  List.hs  Monad.hs  Optional.hs  State.hs  _Applicative.hsplay  _Id.hsplay  _List.hsplay  _Monad.hsplay  _Optional.hsplay  _State.hsplay
haskell/FudgetsTest.hsproj/: .uuid  FudgetsTest.cabal  FudgetsTest.hs  _FudgetsTest.hsplay
haskell/MonadTrans.hsproj/: .uuid  MonadTrans.cabal  MonadTrans.hs  MonadTransLearn.hs  ReaderMonad.hs  WriterMonad.hs  _MonadTrans.hsplay  _MonadTransLearn.hsplay  _ReaderMonad.hsplay  _WriterMonad.hsplay
haskell/realworld.hsproj/: .uuid  Prettify.hs  PrettyJSON.hs  PutJSON.hs  Realworld.hs  SimpleJSON.hs  _Prettify.hsplay  _PrettyJSON.hsplay  _PutJSON.hsplay  _Realworld.hsplay  _SimpleJSON.hsplay  realworld.cabal
lisp/: 1.11.rkt  1.2.rkt  1.29.rkt  1.3.rkt  1.30.rkt  1.31.rkt  1.32.rkt  1.33.rkt  1.34.rkt  1.6.rkt  1.9.rkt  2.2.1.rkt  2.2.3.rkt  2.33.rkt  2.36.rkt  2.4.rkt  2.4.rkt~  2.8.rkt  2.8.rkt~  3.1.rkt  3.1.rkt~  3.2.rkt  3.5.rkt  4.1.rkt  4.1.scm  4.11.rkt  cons.rkt  flatmap.rkt  lambda.rkt  map.rkt  stream-cons.rkt  stream.rkt  test.scm  tree.rkt
(+310 files in other folders)
