name: realworld
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.18-1
x-last-ide-version: HfM1.3.0
Executable realworld
  main-is: Realworld.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      PutJSON
      SimpleJSON
      Prettify
      PrettyJSON
